crates/rome_js_formatter/tests/specs/prettier/typescript/class/generics.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class<T> implements Map<T> {}

interface AudioBufferList {
	mBuffers: interop.Reference<any /*AudioBuffer*/>;
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,5 +1,5 @@
 class<T> implements Map<T> {}
 
 interface AudioBufferList {
-  mBuffers: interop.Reference<any /*AudioBuffer*/>;
+  mBuffers: interop.Reference<any /*AudioBuffer*/ >;
 }
```

# Output

```js
class<T> implements Map<T> {}

interface AudioBufferList {
  mBuffers: interop.Reference<any /*AudioBuffer*/ >;
}
```


# Errors
```
error[SyntaxError]: class declarations must have a name
  ┌─ generics.ts:1:1
  │
1 │ class<T> implements Map<T> {}
  │ ^^^^^


```


